Addition of FY Project

--- a/index.html
+++ b/index.html
@@ -210,7 +210,9 @@
                 <a>Help</a>
             </ul>
         </div>
-        <div class="last-logo">URBANVIBE</div>
+        <div class="last-logo" style="color: white;">
+            URBANVIBE
+        </div>
 
 
         <div class="foot-panel3">
