Addition of FY ITE Project

--- a/feedback.html
+++ b/feedback.html
@@ -10,6 +10,11 @@
             background: #f2f2f2;
             margin: 0;
             padding: 0;
+            background-image: url("bg.jpg"); /* change image name */
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+
         }
 
         .container {
@@ -104,6 +109,8 @@
 
         <button type="submit">Submit Feedback</button>
     </form>
+    <a href="index.html"><button class="button">Move to home page</button></a>
+
 </div>
 
 </body>
