--- a/contactus.html
+++ b/contactus.html
@@ -9,6 +9,11 @@
             background-color: #f7f7f7;
             margin: 0;
             padding: 0;
+            background-image: url("bg.jpg"); /* change image name */
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+
         }
 
         .container {
@@ -90,7 +95,10 @@
         <input type="email" placeholder="Your Email" required>
         <textarea rows="4" placeholder="Your Message" required></textarea>
         <button type="submit">Submit</button>
+        <br>
     </form>
+    <a href="index.html"><button class="button">Move to home page</button></a>
+
 </div>
 
 </body>
