--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                 <div class="nav-signin border">
                     <ul>
-                        <a href="signup.html" target="_blank" >Sign In</a>
+                        <a href="signup.html" target="_blank" >Sign Up</a>
 
                     </ul>
                     <p class="nav-second ">Account & Lists</p>
@@ -56,7 +56,7 @@
             <div class="panel">
                 <div class="panel-ops" style="color: white;">
                     <a href="index.html"><p class="border">Home </p></a>
-                    <p><span><b style="color: white;"><a href="contactus.html" target="_blank">Contact Us</a></b></span></p>
+                    <p><span><b><a href="contactus.html" target="_blank">Contact Us</a></b></span></p>
                     <p><a href="feedback.html" target="_blank">Feedback</a></p>
                 </div>
 
@@ -76,7 +76,7 @@
                     </p>
                         <p style="color:black">₹ 1199
                         Price incl. of all taxes</p>
-                        <a href="signin.html" target="_blank"><button class="button">Buy Now</button></a>
+                        <a href="purchase.html" target="_blank"><button class="button">Buy Now</button></a>
                 </div>
             </div>
             <div class=" box">                
@@ -87,7 +87,7 @@
                         Super Oversized T-Shirts</p>
                         <p style="color:black">₹ 1299
                             Price incl. of all taxes</p>
-                            <a href="signin.html" target="_blank"><button class="button">Buy Now</button></a>
+                            <a href="purchase.html" target="_blank"><button class="button">Buy Now</button></a>
                 </div>
             </div>
             <div class=" box">                
@@ -99,7 +99,7 @@
                         </p>
                         <p style="color:black">₹ 1499
                             Price incl. of all taxes</p>
-                        <a href="signin.html" target="_blank"><button class="button">Buy Now</button></a>
+                        <a href="purchase.html" target="_blank"><button class="button">Buy Now</button></a>
                 </div>
             </div>
             <div class=" box">                
@@ -111,7 +111,7 @@
                     </p>
                     <p style="color:black">₹ 1149
                         Price incl. of all taxes</p>
-                        <a href="signin.html" target="_blank"><button class="button">Buy Now</button></a>
+                        <a href="purchase.html" target="_blank"><button class="button">Buy Now</button></a>
                 </div>
             </div>
             <div class=" box">
@@ -122,7 +122,7 @@
                         Oversized T-Shirts</p>
                         <p style="color:black">₹ 949
                             Price incl. of all taxes</p>
-                            <a href="signin.html" target="_blank"><button class="button">Buy Now</button></a>
+                            <a href="purchase.html" target="_blank"><button class="button">Buy Now</button></a>
                 </div>
             </div>
             <div class=" box">                
@@ -135,7 +135,7 @@
                         
                         <p style="color:black">₹ 949
                             Price incl. of all taxes</p>
-                            <a href="signin.html" target="_blank"><button class="button">Buy Now</button></a>
+                            <a href="purchase.html" target="_blank"><button class="button">Buy Now</button></a>
                 </div>
             </div>
             <div class=" box">                
@@ -147,7 +147,7 @@
                     </p>
                     <p style="color:black">₹ 1249
                         Price incl. of all taxes</p>
-                        <a href="signin.html" target="_blank"><button class="button">Buy Now</button></a>
+                        <a href="purchase.html" target="_blank"><button class="button">Buy Now</button></a>
                 </div>
             </div>
             <div class=" box">                
@@ -158,16 +158,16 @@
                         Oversized T-Shirts</p>
                         <p style="color:black">₹ 849
                             Price incl. of all taxes</p>
-                            <a href="signin.html" target="_blank"><button class="button">Buy Now</button></a>
+                            <a href="purchase.html" target="_blank"><button class="button">Buy Now</button></a>
                 </div>
             </div>
     </div>
 
     <footer>
 
-        <div class="foot-panel2">
+        <div class="foot-panel1">
             <ul>
-                <p>Get to Know Us</p>
+                <h3>Get to Know Us</h3>
                 <a class="underline">About Urbanvibe</a>
                 <a>Careers</a>
                 <a>Press Release</a>
@@ -175,7 +175,7 @@
             </ul>
 
             <ul>
-                <p>Make Money with Us</p>
+                <h3>Make Money with Us</h3>
                 <a>Sell on Urbanvibe</a>
                 <a>Sell under Urbanvibe Accelerator</a>
                 <a>Protect and Build Your Brand</a>
@@ -185,7 +185,7 @@
             </ul>
 
             <ul>
-                <p>Let Us Help You</p>
+                <h3>Let Us Help You</h3>
                 <a>Your Account</a>
                 <a>Returns Centre</a>
                 <a>Urbanvibe App Download</a>
@@ -197,7 +197,7 @@
         </div>
 
 
-        <div class="foot-panel3">
+        <div class="foot-panel2">
             <ul>
                 <p><span style="color: white;">
                         <big><b>
