--- a/signup.html
+++ b/signup.html
@@ -15,7 +15,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-image: url("bg.jpg"); /* change image name */
+            background-image: url("bg4.jpg");
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
