--- a/contactus.html
+++ b/contactus.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
     <title>Contact Us - Urban Vibe</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f7f7f7;
+            font-family: Arial;
             margin: 0;
             padding: 0;
-            background-image: url("bg.jpg"); /* change image name */
+            background-image: url("bg2.jpg");
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
-
         }
 
         .container {
@@ -60,10 +57,26 @@
             border-radius: 5px;
             cursor: pointer;
             font-size: 16px;
+            margin-top: 10px;
         }
 
         button:hover {
             background: #000;
+        }
+
+        .home-btn {
+            display: block;
+            text-align: center;
+            margin-top: 15px;
+            padding: 10px;
+            background: #444;
+            color: white;
+            border-radius: 5px;
+            text-decoration: none;
+        }
+
+        .home-btn:hover {
+            background: #222;
         }
     </style>
 </head>
@@ -76,30 +89,37 @@
         <p><strong>Email:</strong> support@urbanvibe.com</p>
         <p><strong>Mobile Number:</strong> +91 9876543210</p>
         <p><strong>Helpline Number:</strong> 1800-123-456</p>
-        <br>
 
         <p><b>Follow us:</b></p>
         <div class="social">
             <a href="https://instagram.com" target="_blank">🅾 Instagram</a>
             <a href="https://facebook.com" target="_blank">𝐟 Facebook</a>
             <a href="https://x.com/" target="_blank">𝕏 Twitter</a>
-            
         </div>
     </div>
 
-    <hr><br>
+    <hr>
 
-    <form>
+    <!-- CONTACT FORM -->
+    <form id="contactForm">
         <h3>Send us a message</h3>
         <input type="text" placeholder="Your Name" required>
         <input type="email" placeholder="Your Email" required>
         <textarea rows="4" placeholder="Your Message" required></textarea>
         <button type="submit">Submit</button>
-        <br>
     </form>
-    <a href="index.html"><button class="button">Move to home page</button></a>
 
+    <a href="index.html" class="home-btn">Move to Home Page</a>
 </div>
+
+<!-- POPUP SCRIPT -->
+<script>
+    document.getElementById("contactForm").addEventListener("submit", function(event) {
+        event.preventDefault(); 
+        alert("Your message has been submitted successfully!");
+        this.reset(); // clears form after submit
+    });
+</script>
 
 </body>
 </html>
